discussion/kv_engine/177006/177006_rev6_discussion.txt
======================================================================================================================
DESCRIPTION:

[serverless] Add Dcp throttling and metering test

Add unit tests to verify that Throttling and Metering works
over DCP

Change-Id: Iab9d25c980d7d115d2783ba485177cafda652381

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-07-03 12:34:36.000000000
Message: 
Uploaded patch set 6: Patch Set 5 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-07-03 14:36:29.000000000
Message: 
Patch Set 6: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18570/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/dcp_drain.cc:187:9: error: use of undeclared identifier "EXPECT_TRUE" [clang-diagnostic-error]
        EXPECT_TRUE(rsp.isSuccess()) << rsp.getStatus();
        ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18570/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/dcp_drain.cc:187:9:
error: use of undeclared identifier "EXPECT_TRUE" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18570/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21442/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21442/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8241/ : FAILURE

Compile error at [2022-07-03T13:04:57.854Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/tests/testapp_serverless/dcp_drain.cc:187:9:
error: use of undeclared identifier "EXPECT_TRUE"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8241/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17721/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47329/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39782/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20802/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28836/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20455/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8341/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19677/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
